--- a/src/public/addEmploye/employeFrom.css
+++ b/src/public/addEmploye/employeFrom.css
@@ -1,14 +1,83 @@
+html {
+  background-color: rgba(63, 187, 218, 0.733);
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+header {
+  background: rgb(0, 0, 0);
+}
+
+header::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.logo {
+  float: left;
+  width: 35px;
+  padding: 10px 0;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+nav li {
+  display: inline-block;
+  margin-left: 50px;
+  padding-top: 15px;
+
+  position: relative;
+}
+nav a {
+  color: azure;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 10px;
+}
+
+nav a::before {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 100%;
+  background-color: chartreuse;
+
+  position: absolute;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+  width: 100%;
+}
+
+.body {
+  font-family: cursive;
+  font-weight: 700;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding: 10px;
+}
+
 * {
   font-family: cursive;
   font-weight: 700;
   box-sizing: border-box;
-}
-
-body {
-  background-color: #00bcd4;
-  display: flex;
-  justify-content: center;
-  align-content: center;
 }
 
 form {
