--- a/src/public/car-data.css
+++ b/src/public/car-data.css
@@ -1,3 +1,67 @@
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+header {
+  background: rgb(0, 0, 0);
+}
+
+header::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.logo {
+  float: left;
+  width: 55px;
+  padding: 10px 0;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+nav li {
+  display: inline-block;
+  margin-left: 50px;
+  padding-top: 25px;
+
+  position: relative;
+}
+nav a {
+  color: azure;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+nav a:hover {
+}
+
+nav a::before {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 100%;
+  background-color: chartreuse;
+
+  position: absolute;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+  width: 100%;
+}
+
 body {
   background-image: url("https://static.carthrottle.com/workspace/uploads/posts/2015/04/car-company-logos-10-55401975116a0.jpeg");
   background-repeat: no-repeat;
@@ -64,13 +128,13 @@ div > span:hover {
   font-size: larger;
 }
 
-#backButton:hover{
+#backButton:hover {
   cursor: pointer;
   border: 2px solid black;
   font-size: larger;
 }
 
-p{
+p {
   font-size: 15px;
   color: rgba(199, 19, 19, 0.555);
 }
@@ -94,7 +158,6 @@ i {
   }
 }
 
-
-#ulInfo{
- font-size: xx-large;
+#ulInfo {
+  font-size: xx-large;
 }
