--- a/src/public/country.css
+++ b/src/public/country.css
@@ -1,10 +1,71 @@
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+header {
+  background: rgb(0, 0, 0);
+}
+
+header::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.logo {
+  float: left;
+  width: 55px;
+  padding: 10px 0;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+nav li {
+  display: inline-block;
+  margin-left: 50px;
+  padding-top: 25px;
+
+  position: relative;
+}
+nav a {
+  color: azure;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+nav a::before {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 100%;
+  background-color: chartreuse;
+
+  position: absolute;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+  width: 100%;
+}
+
 body {
   background-image: url("https://static.carthrottle.com/workspace/uploads/posts/2015/04/car-company-logos-10-55401975116a0.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
-
 
 h1 {
   font-family: Arial;
