--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,13 +1,75 @@
-body{
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+header {
+  background: rgb(0, 0, 0);
+}
+
+header::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.logo {
+  float: left;
+  width: 30px;
+  padding: 10px 0;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+nav li {
+  display: inline-block;
+  margin-left: 50px;
+  padding-top: 25px;
+
+  position: relative;
+}
+nav a {
+  color: azure;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+nav a::before {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 100%;
+  background-color: chartreuse;
+
+  position: absolute;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+  width: 100%;
+}
+
+body {
   background-image: url("https://static.carthrottle.com/workspace/uploads/posts/2015/04/car-company-logos-10-55401975116a0.jpeg");
   background-size: 100%;
 }
 
-form{
+form {
   background-color: rgb(51, 46, 46);
   color: rgb(68, 184, 129);
   width: 315px;
-  height:38px;
+  height: 38px;
   margin: 0 auto;
   border-radius: 25px;
   padding-top: 13px;
@@ -15,16 +77,16 @@ form{
   font-size: larger;
 }
 
-h1{
+h1 {
   margin: 0 auto;
   /* border: 5px solid black; */
   color: rgb(179, 63, 63);
   text-shadow: 2px rgb(13, 15, 15);
-  width: 315px ;
+  width: 315px;
   margin-bottom: 20px;
   background-color: darkcyan;
   border-radius: 25px;
- text-align: center;
- margin-top: 20px;
- font-size: 36px;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 36px;
 }
